--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,5 +1,6 @@
 .header {
-  margin-bottom: 40px;
+  margin-bottom: 30px;
+  border: 1px solid transparent; //prevents overflowing - why??
 
   &__bg {
     position: relative;
