--- a/css/style.css
+++ b/css/style.css
@@ -32,12 +32,12 @@ body {
 
 .header__filters {
   position: relative;
-  min-height: 100px;
+  min-height: 80px;
   max-width: 1400px;
-  top: -50px;
+  top: -40px;
   padding: 15px;
   margin: 0 20px;
-  margin-bottom: -50px;
+  margin-bottom: -40px;
   background-color: #effafa;
   border-radius: 5px;
   display: -webkit-box;
@@ -46,6 +46,9 @@ body {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-shadow: 0px 5px 20px #b2bdbd;
           box-shadow: 0px 5px 20px #b2bdbd;
 }
@@ -57,6 +60,14 @@ body {
   }
 }
 
+.header__tags {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
 .header__tag {
   display: inline-block;
   background-color: #eef6f6;
@@ -65,24 +76,25 @@ body {
   border: 0;
   border-radius: 4px;
   margin: 7px 10px;
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   overflow: hidden;
 }
 
 .header__tag-text {
-  display: inline-block;
-  padding: 7px 15px;
+  padding: 10px 15px;
 }
 
 .header__icon {
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -ms-flex-item-align: stretch;
+      align-self: stretch;
   padding: 0 7px;
   background: #5ba4a4;
 }
@@ -93,9 +105,14 @@ body {
       align-self: center;
   background: none;
   border: none;
-  padding: 0 20px;
+  padding: 7px 20px;
   font-size: 1.2em;
   color: #7b8e8e;
+}
+
+.header__clear:hover {
+  cursor: pointer;
+  text-decoration: underline;
 }
 
 .job {
