--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -11,16 +11,17 @@
 
   &__filters {
     position: relative;
-    min-height: 100px;
+    min-height: 80px;
     max-width: 1400px;
-    top: -50px;
+    top: -40px;
     padding: 15px;
     margin: 0 20px;
-    margin-bottom: -50px;
+    margin-bottom: -40px;
     background-color: $light-grayish-cyan-bg;
     border-radius: 5px;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     box-shadow: $box-shadow;
 
     @media (min-width: 1440px) {
@@ -29,20 +30,25 @@
     }
   }
 
+  &__tags {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
   &__tag {
     @include tag;
-    display: inline-flex;
+    display: flex;
     overflow: hidden;
   }
 
   &__tag-text {
-    display: inline-block;
-    padding: 7px 15px;
+    padding: 10px 15px;
   }
 
   &__icon {
-    display: inline-flex;
+    display: flex;
     align-items: center;
+    align-self: stretch;
     padding: 0 7px;
     background: $desaturated-dark-cyan;
   }
@@ -51,8 +57,13 @@
     align-self: center;
     background: none;
     border: none;
-    padding: 0 20px;
+    padding: 7px 20px;
     font-size: 1.2em;
     color: $dark-grayish-cyan;
+
+    &:hover {
+      cursor: pointer;
+      text-decoration: underline;
+    }
   }
 }
