add sass structure

--- a/todo-app/src/sass/components/App.scss
+++ b/todo-app/src/sass/components/App.scss
@@ -1,7 +1,6 @@
-@import './colors';
 
 .App {
-  background: url('./images/bg-mobile-light.jpg') no-repeat top/120%;
+  background: url('../../images/bg-mobile-light.jpg') no-repeat top/120%;
   min-height: 100vh;
   padding: 0 25px;
   padding-top: 50px;
