--- a/todo-app/src/sass/components/AddTask.scss
+++ b/todo-app/src/sass/components/AddTask.scss
@@ -1,4 +1,4 @@
-@import '../colors';
+
 
 .AddTask {
   height: 66px;
@@ -18,6 +18,7 @@
     flex-grow: 1;
     margin-left: 15px;
     border: none;
+    font-family: 'Josefin Sans', sans-serif;
     font-weight: 700;
     color: $veryDarkGrayishBlue;
     background-color: $veryLightGray;
