--- a/todo-app/src/sass/index.scss
+++ b/todo-app/src/sass/index.scss
@@ -1,11 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap');
 
+@import './colors';
+@import './mixins';
+@import './components/App.scss';
+@import './components/AddTask.scss';
+@import './components/DisplayTasks.scss';
+@import './components/Task.scss';
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
-$veryLightGray: hsl(0, 0%, 98%);
+
 body {
   font-family: 'Josefin Sans', sans-serif;
   font-size: 18px;
