Task and DisplayTask styles

--- a/todo-app/src/sass/components/AddTask.scss
+++ b/todo-app/src/sass/components/AddTask.scss
@@ -8,10 +8,7 @@
   padding: 20px;
 
   &__btn {
-    width: 26px;
-    background-color: $veryLightGray;
-    border: 1px solid $veryLightGrayishBlue;
-    border-radius: 50%;
+    @include btn-circle;
   }
 
   &__input {
