--- a/todo-app/src/sass/components/App.scss
+++ b/todo-app/src/sass/components/App.scss
@@ -25,4 +25,10 @@
       cursor: pointer;
     }
   }
+
+  &__footer {
+    margin-top: 50px;
+    color: $darkGrayishBlue;
+    text-align: center;
+  }
 }
