--- a/todo-app/src/sass/components/Task.scss
+++ b/todo-app/src/sass/components/Task.scss
@@ -22,7 +22,7 @@
     width: 26px;
     height: 26px;
     border: none;
-    background-color: $veryLightGray;
+    background-color: white;
     display: flex;
     justify-content: center;
     align-items: center;
