add media queries

--- a/todo-app/src/sass/_mixins.scss
+++ b/todo-app/src/sass/_mixins.scss
@@ -7,7 +7,7 @@
 }
 
 @mixin btn-text {
-  color: $darkGrayishBlue;
+  color: $lightGrayishBlue;
   border: none;
   background-color: transparent;
 }
