--- a/todo-app/src/sass/components/App.scss
+++ b/todo-app/src/sass/components/App.scss
@@ -1,6 +1,5 @@
-
 .App {
-  background: url('../../images/bg-mobile-light.jpg') no-repeat top/120%;
+  background: url("../../images/bg-mobile-light.jpg") no-repeat top/120%;
   min-height: 100vh;
   padding: 0 25px;
   padding-top: 50px;
@@ -28,7 +27,13 @@
 
   &__footer {
     margin-top: 50px;
-    color: $darkGrayishBlue;
+    color: $lightGrayishBlue;
     text-align: center;
+  }
+
+  &__filters-mobile {
+    @media (min-width: 600px) {
+      display: none;
+    }
   }
 }
