--- a/todo-app/src/sass/components/DisplayTasks.scss
+++ b/todo-app/src/sass/components/DisplayTasks.scss
@@ -19,11 +19,21 @@
   }
 
   &__items-left {
-    color: $darkGrayishBlue;
+    color: $lightGrayishBlue;
     font-size: .9em;
   }
 
   &__btn-clear {
     @include btn-text;
+  }
+
+  &__filters-desktop {
+    @media (max-width: 599px) {
+        display: none;
+    }
+
+    & .FilterTasks {
+      box-shadow: none;
+    }
   }
 }
