--- a/todo-app/src/sass/components/FilterTasks.scss
+++ b/todo-app/src/sass/components/FilterTasks.scss
@@ -2,11 +2,14 @@
   height: 66px;
   display: flex;
   justify-content: center;
+  background-color: white;
+  color: $lightGrayishBlue;
   border-radius: 5px;
   @include box-shadow;
 
   &__btn {
     @include btn-text;
+    color: $darkGrayishBlue;
     font-size: 1em;
     margin: 0 10px;
   }
