add cursor pointer and active states to filters

--- a/todo-app/src/sass/_colors.scss
+++ b/todo-app/src/sass/_colors.scss
@@ -3,7 +3,7 @@
 // Primary
 
 $brightBlue: hsl(220, 98%, 61%);
-$checkBackground: linear-gradient(135deg, hsl(192, 100%, 67%), hsl(280, 87%, 65%));;
+$checkBackground: linear-gradient(135deg, hsl(192, 100%, 67%), hsl(280, 87%, 65%));
 
 // Light Theme
 
