--- a/todo-app/src/sass/components/FilterTasks.scss
+++ b/todo-app/src/sass/components/FilterTasks.scss
@@ -12,5 +12,9 @@
     color: $darkGrayishBlue;
     font-size: 1em;
     margin: 0 10px;
+
+    &--active {
+      color: $brightBlue;
+    }
   }
 }
