--- a/todo-app/src/sass/components/Task.scss
+++ b/todo-app/src/sass/components/Task.scss
@@ -17,6 +17,10 @@
     .Task--done & {
       background: $checkBackground;
     }
+
+    &:hover {
+      background: red;
+    }
   }
 
   &__name {
