--- a/todo-app/src/sass/index.scss
+++ b/todo-app/src/sass/index.scss
@@ -15,6 +15,10 @@
   box-sizing: border-box;
 }
 
+button {
+  cursor: pointer;
+}
+
 input, button {
   font-family: 'Josefin Sans', sans-serif;
 }
