add more hover styles

--- a/todo-app/src/sass/components/FilterTasks.scss
+++ b/todo-app/src/sass/components/FilterTasks.scss
@@ -9,9 +9,12 @@
 
   &__btn {
     @include btn-text;
-    color: $darkGrayishBlue;
     font-size: 1em;
     margin: 0 10px;
+
+    &:hover {
+      color: $darkGrayishBlue;
+    }
 
     &--active {
       color: $brightBlue;
