--- a/todo-app/src/sass/_mixins.scss
+++ b/todo-app/src/sass/_mixins.scss
@@ -2,7 +2,7 @@
   width: 26px;
   height: 26px;
   background-color: white;
-  border: 1px solid $veryLightGrayishBlue;
+  border: none;
   border-radius: 50%;
 }
 
