--- a/todo-app/src/sass/components/DisplayTasks.scss
+++ b/todo-app/src/sass/components/DisplayTasks.scss
@@ -25,6 +25,10 @@
 
   &__btn-clear {
     @include btn-text;
+
+    &:hover {
+      color: $darkGrayishBlue;
+    }
   }
 
   &__filters-desktop {
