--- a/todo-app/src/sass/components/Task.scss
+++ b/todo-app/src/sass/components/Task.scss
@@ -7,19 +7,34 @@
   justify-content: space-between;
   align-items: center;
   border-bottom: 1px solid $lightGrayishBlue;
+  position: relative;
+  z-index: 1;
 
   &__btn-check {
     @include btn-circle;
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
+    box-sizing: border-box;
 
     .Task--done & {
       background: $checkBackground;
     }
 
-    &:hover {
-      background: red;
+    &::before {
+      border-radius: 50%;
+      content: '';
+      background-color: $veryLightGrayishBlue;
+      padding: 1px;
+      width: 26px;
+      height: 26px;
+      position:absolute;
+      z-index:-1;
+    }
+
+    &:hover::before {
+      background-image: linear-gradient(135deg, hsl(192, 100%, 67%), hsl(280, 87%, 65%));
     }
   }
 
