--- a/todo-app/src/sass/_colors.scss
+++ b/todo-app/src/sass/_colors.scss
@@ -1,5 +1,3 @@
-
-
 // Primary
 
 $brightBlue: hsl(220, 98%, 61%);
@@ -22,3 +20,13 @@ $lightGrayishBlueHover: hsl(236, 33%, 92%);
 $darkGrayishBlue: hsl(234, 11%, 52%);
 $veryDarkGrayishBlue: hsl(233, 14%, 35%);
 $veryDarkGrayishBlue: hsl(237, 14%, 26%);
+
+$darkMode: (
+  "veryDarkBlue": hsl(235, 21%, 11%),
+  "veryDarkDesaturatedBlue": hsl(235, 24%, 19%),
+  "lightGrayishBlue": hsl(234, 39%, 85%),
+  "lightGrayishBlueHover": hsl(236, 33%, 92%),
+  "darkGrayishBlue": hsl(234, 11%, 52%),
+  "veryDarkGrayishBlue": hsl(233, 14%, 35%),
+  "veryDarkGrayishBlueHover": hsl(237, 14%, 26%),
+);
