--- a/todo-app/src/sass/components/Task.scss
+++ b/todo-app/src/sass/components/Task.scss
@@ -1,5 +1,3 @@
-
-
 .Task {
   height: 66px;
   padding: 20px;
@@ -25,13 +23,13 @@
 
     &::before {
       border-radius: 50%;
-      content: '';
+      content: "";
       background-color: $veryLightGrayishBlue;
       padding: 1px;
       width: 26px;
       height: 26px;
-      position:absolute;
-      z-index:-1;
+      position: absolute;
+      z-index: -1;
     }
 
     &:hover::before {
