--- a/todo-app/src/sass/components/FilterTasks.scss
+++ b/todo-app/src/sass/components/FilterTasks.scss
@@ -2,7 +2,7 @@
   height: 66px;
   display: flex;
   justify-content: center;
-  background-color: white;
+  // background-color: white;
   color: $lightGrayishBlue;
   border-radius: 5px;
 
