--- a/todo-app/src/sass/components/AddTask.scss
+++ b/todo-app/src/sass/components/AddTask.scss
@@ -1,9 +1,10 @@
 .AddTask {
   height: 66px;
   display: flex;
+  align-items: center;
   background-color: white;
   border-radius: 5px;
-  padding: 20px;
+  padding: 0 20px;
 
   &__btn {
     @include btn-circle;
@@ -11,6 +12,7 @@
   }
 
   &__input {
+    height: 66px;
     flex-grow: 1;
     margin-left: 15px;
     border: none;
