add drag and drop

--- a/todo-app/src/sass/components/DisplayTasks.scss
+++ b/todo-app/src/sass/components/DisplayTasks.scss
@@ -8,6 +8,10 @@
     border-radius: 5px 5px 0 0;
   }
 
+  &__item.dragging {
+    opacity: .5;
+  }
+
   &__item:first-child div {
     border-radius: 5px 5px 0 0;
   }
