--- a/style.css
+++ b/style.css
@@ -69,6 +69,8 @@ abbr {
   display: flex;
   justify-content: space-between;
   align-items: center;
+
+  user-select: none;
 }
 
 .faq__question-btn--active {
@@ -84,6 +86,7 @@ abbr {
 
 .faq__question-arrow {
   transition: all .3s ease-in;
+  margin-left: 15px;
 }
 
 .faq__question-arrow--active {
@@ -93,15 +96,19 @@ abbr {
 
 .faq__answer {
   color: hsl(240, 6%, 50%);
+  position: absolute;
   opacity: 0;
-  max-height: 0;
-  transition: all .3s ease-in;
+  transform: translateY(-20px);
+  transition: transform .2s ease-out;
   line-height: 1.4;
+  z-index: -2;
 }
 
 .faq__answer--active {
+  position: initial;
   opacity: 1;
-  max-height: 100px;
+  transform: translateY(0);
+  max-height: 100%;
 }
 
 .faq__divider {
